# speedfog

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  config.example.toml  placi.toml  pyproject.toml  reduced_merge.toml
core/: README.md  pyproject.toml  zones.toml
core/data/: clusters.json  zone_metadata.toml
core/speedfog_core/: __init__.py  balance.py  clusters.py  config.py  dag.py  generator.py  main.py  output.py  planner.py  validator.py  zones.py
core/tests/: test_balance.py  test_config.py  test_dag.py  test_generator.py  test_integration.py  test_output.py  test_planner.py  test_validator.py  test_zones.py
data/: README.md  boss_arena_tags.json  care_package_items.toml  clusters.json  enemy_preset.yaml  er-common.emedf.json  fog_data.json  fogevents.txt  item_preset.yaml  phantom_skins.toml  speedfog-events.yaml  zone_metadata.toml  zone_warps.json
docs/: alternate-warp-patching.md  architecture.md  boss-arena-constraints.md  boss-trigger-lock.md  care-package.md  chapel-grace.md  clusters.md  connection-injection.md  dag-generation.md  death-markers.md  esd-editing.md  event-flags.md  fogmod-emevd-model.md  item-giving-limitations.md  item-randomizer.md  opensplit-overrides.md  phantom-skins.md  save-backup.md  stake-removal.md  starting-items.md  startup-flag-injection.md  torrent-arena-patcher.md  vanilla-warp-removal.md  zone-tracking.md
reference/: README.md
speedfog/: __init__.py  balance.py  boss_arena_constraints.py  care_package.py  clusters.py  config.py  crosslinks.py  dag.py  fog_mod.py  generation_log.py  generator.py  generator_v2.py  item_randomizer.py  main.py  mod_patcher.py  output.py  packaging.py  planner.py  validator.py
tests/: test_balance.py  test_boss_arena_constraints.py  test_care_package.py  test_clusters.py  test_config.py  test_crosslinks.py  test_dag.py  test_output.py  (+10 more)
(+261 files in other folders)
